2010-01-28  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Support kinetic scrolling on Maemo 5

        https://bugs.webkit.org/show_bug.cgi?id=34267

        Patch by Ralf Engels <ralf.engels@nokia.com> and
        Robert Griebl <rgriebl@trolltech.com>

        * Api/qwebview.cpp:
        (QWebViewKineticScroller::QWebViewKineticScroller):
        (QWebViewKineticScroller::eventFilter):
        (QWebViewKineticScroller::currentFrame):
        (QWebViewKineticScroller::scrollingFrameAt):
        (QWebViewKineticScroller::attachToWidget):
        (QWebViewKineticScroller::removeFromWidget):
        (QWebViewKineticScroller::positionRange):
        (QWebViewKineticScroller::position):
        (QWebViewKineticScroller::viewportSize):
        (QWebViewKineticScroller::setPosition):
        (QWebView::QWebView):

2010-01-28  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Do not set the combobox font on Maemo5 and S60; use the
        default instead.

        * WebCoreSupport/QtFallbackWebPopup.cpp:
        (WebCore::QtFallbackWebPopup::populate):

2010-01-28  Trond Kjernåsen <trond@trolltech.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix for endless print loop when printing web pages

        * Api/qwebframe.cpp:
        (QWebFrame::print):

2010-01-27  Diego Gonzalez  <diego.gonzalez@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT Provide worker thread ability to track counters
        https://bugs.webkit.org/show_bug.cgi?id=34221

        Implement workerThreadCount() in LayoutTestController of Qt DRT

        Tests:
        fast/workers/dedicated-worker-lifecycle.html
        fast/workers/shared-worker-frame-lifecycle.html
        fast/workers/shared-worker-lifecycle.html
        fast/workers/worker-lifecycle.html

        * Api/qwebpage.cpp:
        (qt_drt_workerThreadCount):
